# ChangeLog for www-servers/mongrel
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/mongrel/ChangeLog,v 1.54 2013/12/26 18:56:24 maekke Exp $

  26 Dec 2013; Markus Meier <maekke@gentoo.org> mongrel-1.1.5-r3.ebuild:
  arm stable, bug #493780

  22 Dec 2013; Jeroen Roovers <jer@gentoo.org> mongrel-1.1.5-r3.ebuild:
  Stable for HPPA (bug #493780).

  01 Sep 2013; Hans de Graaff <graaff@gentoo.org> mongrel-1.1.5-r3.ebuild:
  Drop virtual/ruby-test-unit which is a noop, bug 380711.

  11 Aug 2013; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  Drop package from ruby herd as per 2013-07-21 announcement.

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> mongrel-1.1.5-r3.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> mongrel-1.1.5-r3.ebuild:
  Add ~alpha/~ia64/~sparc wrt #405757

  08 Jul 2012; Jeroen Roovers <jer@gentoo.org> mongrel-1.1.5-r3.ebuild:
  Marked ~hppa (bug #417573).

  30 Apr 2012; Hans de Graaff <graaff@gentoo.org> -mongrel-1.1.5-r2.ebuild:
  Remove old version.

  07 Aug 2011; Raúl Porcel <armin76@gentoo.org> mongrel-1.1.5-r2.ebuild,
  mongrel-1.1.5-r3.ebuild:
  Drop sparc keyword

  23 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> mongrel-1.1.5-r3.ebuild:
  ppc/ppc64 stable wrt #375435

  23 Jul 2011; Markus Meier <maekke@gentoo.org> mongrel-1.1.5-r3.ebuild:
  amd64/x86 stable, bug #375435

*mongrel-1.1.5-r3 (07 Jun 2011)

  07 Jun 2011; Hans de Graaff <graaff@gentoo.org> +mongrel-1.1.5-r3.ebuild:
  Remove cgi_multipart_eof_fix from the gemspec since it is no longer in the
  tree and not needed for our ruby versions.

  24 Apr 2011; Hans de Graaff <graaff@gentoo.org> -mongrel-1.1.5.ebuild:
  Remove old version.

  24 Apr 2011; Raúl Porcel <armin76@gentoo.org> mongrel-1.1.5-r2.ebuild:
  sparc stable wrt #349877

  17 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> mongrel-1.1.5-r2.ebuild: